--- a/index.html
+++ b/index.html
@@ -247,8 +247,9 @@
         <h2 class="products__title">nos produits</h2>
         <div class="products__content">
           <div class="products__pain">
-            <div class="pain--cereale">
+            <div class="product__content--element">
               <img src="./img/accueil/nos-produits/cereale.jpg" alt="produit" class="products__img">
+              <div class="blur"></div>
               <p class="products__text">pain aux céréales</p>
             </div>
           </div>
