fin produits, formulaire

--- a/index.html
+++ b/index.html
@@ -246,11 +246,152 @@
       <div class="container">
         <h2 class="products__title">nos produits</h2>
         <div class="products__content">
-          <div class="products__pain">
-            <div class="product__content--element">
-              <img src="./img/accueil/nos-produits/cereale.jpg" alt="produit" class="products__img">
-              <div class="blur"></div>
-              <p class="products__text">pain aux céréales</p>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/cereale.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">pain aux céréales</p>
+          </div>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/baguette.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">baguette</p>
+          </div>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/croissant.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">croissant</p>
+          </div>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/pain-chocolat.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">pain aux chocolat</p>
+          </div>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/muffin.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">muffin</p>
+          </div>
+          <div class="product__content--element">
+            <img
+              src="./img/accueil/nos-produits/tartelette.jpg"
+              alt="produit"
+              class="products__img"
+            />
+            <div class="blur"></div>
+            <p class="products__text">tartelette framboise</p>
+          </div>
+        </div>
+        <div class="product__btn">
+          <a href="#" class="btn btn__product">en savoir plus</a>
+        </div>
+      </div>
+    </div>
+    <div class="banner">
+      <div class="banner__blur"></div>
+      <p class="banner__text">Tous nos produits sont fait sur place</p>
+    </div>
+    <div class="contact">
+      <div class="container">
+        <h2 class="contact__title">nous contacter</h2>
+        <div class="content__contact">
+          <form action="" method="get">
+            <div class="contact__form">
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Nom et prénom"
+                class="contact__form-name contact__form-box"
+              />
+            </div>
+            <div class="contact__form">
+              <input
+                type="text"
+                id="mail"
+                name="user_mail"
+                placeholder="Adresse mail"
+                class="contact__form-mail contact__form-box"
+              />
+            </div>
+            <div class="contact__form">
+              <input
+                type="text"
+                id="msg"
+                placeholder="Sujet du message"
+                class="contact__form-text contact__form-box"
+              />
+            </div>
+            <div class="contact__form">
+              <textarea
+                id="msg"
+                placeholder="Contenu de votre message"
+                class="contact__form-msg contact__form-box"
+              ></textarea>
+            </div>
+            <div class="form__btn">
+              <a href="#" class="btn btn__form">envoyer</a>
+            </div>
+          </form>
+          <div class="contact__content">
+            <h3 class="content__title">Boulangerie pâtisserie Victor Hugo</h3>
+            <div class="contact__location contact__element">
+              <img
+                src="./img/contact/Vectorlocation.svg"
+                alt="location"
+                class="contact__img location__img"
+              />
+              <p class="contact__text">57 rue victor hugo, 27000 evreux</p>
+            </div>
+            <div class="contact__tel contact__element">
+              <img
+                src="./img/contact/Vectortel.svg"
+                alt="tel"
+                class="contact__img tel__img"
+              />
+              <p class="contact__text">02 32 33 01 91</p>
+            </div>
+            <div class="contact__mail contact__element">
+              <img
+                src="./img/contact/Vectormail.svg"
+                alt="mail"
+                class="contact__img mail__img"
+              />
+              <p class="contact__text">boulangerie@gmail.com</p>
+            </div>
+            <div class="contact__time contact__element">
+              <img
+                src="./img/contact/Vectortime.svg"
+                alt="time"
+                class="contact__img time__img"
+              />
+              <div class="text">
+                <p class="contact__text">Horaire d'ouverture</p>
+                <p class="contact__text text__time">Lundi : fermé</p>
+                <p class="contact__text text__time">
+                  Du mardi au samedi : 7h00 - 19h00
+                </p>
+                <p class="contact__text text__time">Dimanche : 7h30 - 13h00</p>
+              </div>
             </div>
           </div>
         </div>
