fin contact + debut footer

--- a/index.html
+++ b/index.html
@@ -353,36 +353,37 @@
             </div>
           </form>
           <div class="contact__content">
-            <h3 class="content__title">Boulangerie pâtisserie Victor Hugo</h3>
-            <div class="contact__location contact__element">
+            <h3 class="content__title">Boulangerie pâtisserie</h3>
+            <h3 class="content__title">Victor Hugo</h3>
+            <div class="contact__element">
               <img
                 src="./img/contact/Vectorlocation.svg"
                 alt="location"
-                class="contact__img location__img"
+                class="location__img"
               />
               <p class="contact__text">57 rue victor hugo, 27000 evreux</p>
             </div>
-            <div class="contact__tel contact__element">
+            <div class="contact__element">
               <img
                 src="./img/contact/Vectortel.svg"
                 alt="tel"
-                class="contact__img tel__img"
+                class="tel__img"
               />
               <p class="contact__text">02 32 33 01 91</p>
             </div>
-            <div class="contact__mail contact__element">
+            <div class="contact__element">
               <img
                 src="./img/contact/Vectormail.svg"
                 alt="mail"
-                class="contact__img mail__img"
+                class="mail__img"
               />
               <p class="contact__text">boulangerie@gmail.com</p>
             </div>
-            <div class="contact__time contact__element">
+            <div class="contact__element">
               <img
                 src="./img/contact/Vectortime.svg"
                 alt="time"
-                class="contact__img time__img"
+                class="time__img"
               />
               <div class="text">
                 <p class="contact__text">Horaire d'ouverture</p>
@@ -397,6 +398,39 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer">
+        <div class="container">
+          <div class="footer__content">
+            <div class="footer__page">
+              <h3 class="footer__title page__title">Pages</h3>
+              <a href="#" class="page__link">Accueil</a>
+              <a href="#" class="page__link">Présentation</a>
+              <a href="#" class="page__link">Nos produits</a>
+              <a href="#" class="page__link">Mentions légales</a>
+            </div>
+            <div class="footer__hourly">
+              <h3 class="footer__title hourly__title">Horaire d'ouverture</h3>
+              <p class="hourly__text">Lundi : fermé</p>
+              <p class="hourly__text">Du mardi au samedi : 7h00 - 19h00</p>
+              <p class="hourly__text">Dimanche : 7h30 - 13h00</p>
+            </div>
+            <div class="footer__contact">
+              <h3 class="footer__title title__contact">Contact</h3>
+              <a href="#" class="contact__link">Nous contacter</a>
+              <p class="contact__mail">boulangerie@gmail.com</p>
+              <a href="#" class="contact__facebook">
+                <img src="./img/footer/facebook.svg" alt="facebook" class="facebook__img">
+              </a>
+            </div>
+            <div class="footer__copyright">
+              <img src="./img/footer/copyright.svg" alt="copyright" class="copyright__img">
+              <p class="copyright__text">Copyright - Boulangerie Victor Hugo</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
