--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="nav">
               <ul class="nav__list">
                 <li class="list__item">
-                  <a href="#" class="list__link">Accueil</a>
+                  <a href="#" class="list__link active">Accueil</a>
                 </li>
                 <li class="list__item">
                   <a href="#" class="list__link">Présentation</a>
@@ -403,30 +403,46 @@
         <div class="container">
           <div class="footer__content">
             <div class="footer__page">
-              <h3 class="footer__title page__title">Pages</h3>
-              <a href="#" class="page__link">Accueil</a>
-              <a href="#" class="page__link">Présentation</a>
-              <a href="#" class="page__link">Nos produits</a>
-              <a href="#" class="page__link">Mentions légales</a>
+              <div>
+				<h3 class="footer__title page__title">Pages</h3>
+				<ul class="footer__list">
+				  <li class="page__item"><a href="#" class="page__link footer__text">Accueil</a></li>
+				  <li class="page__item"><a href="#" class="page__link footer__text">Présentation</a></li>
+				  <li class="page__item"><a href="#" class="page__link footer__text">Nos produits</a></li>
+				  <li class="page__item"><a href="#" class="page__link footer__text">Mentions légales</a></li>
+				</ul>
+			  </div>
             </div>
             <div class="footer__hourly">
-              <h3 class="footer__title hourly__title">Horaire d'ouverture</h3>
-              <p class="hourly__text">Lundi : fermé</p>
-              <p class="hourly__text">Du mardi au samedi : 7h00 - 19h00</p>
-              <p class="hourly__text">Dimanche : 7h30 - 13h00</p>
+              <div>
+				<h3 class="footer__title hourly__title">Horaire d'ouverture</h3>
+				<p class="hourly__text footer__text">Lundi : fermé</p>
+				<p class="hourly__text footer__text">Du mardi au samedi : 7h00 - 19h00</p>
+				<p class="hourly__text footer__text">Dimanche : 7h30 - 13h00</p>
+			  </div>
             </div>
             <div class="footer__contact">
-              <h3 class="footer__title title__contact">Contact</h3>
-              <a href="#" class="contact__link">Nous contacter</a>
-              <p class="contact__mail">boulangerie@gmail.com</p>
-              <a href="#" class="contact__facebook">
-                <img src="./img/footer/facebook.svg" alt="facebook" class="facebook__img">
-              </a>
+              <div>
+				<h3 class="footer__title title__contact">Contact</h3>
+				<a href="#" class="contact__link footer__text">Nous contacter</a>
+				<a href="mailto:boulangerie@gmail.com" class="contact__mail footer__text">boulangerie@gmail.com</a>
+				<a href="#" class="contact__facebook">
+				  <img
+					src="./img/footer/facebook.svg"
+					alt="facebook"
+					class="facebook__img"
+				  />
+				</a>
+			  </div>
             </div>
-            <div class="footer__copyright">
-              <img src="./img/footer/copyright.svg" alt="copyright" class="copyright__img">
-              <p class="copyright__text">Copyright - Boulangerie Victor Hugo</p>
-            </div>
+          </div>
+          <div class="footer__copyright">
+            <img
+              src="./img/footer/copyright.svg"
+              alt="copyright"
+              class="copyright__img"
+            />
+            <p class="copyright__text footer__text">Copyright - Boulangerie Victor Hugo</p>
           </div>
         </div>
       </div>
