finish burger menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="topbar__nav">
           <div class="container">
-            <div>
+            <div class="content__nav">
               <div class="logo-container">
                 <a href="#" class="logo logo-show-medium"
                   >boulangerie patisserie
@@ -60,6 +60,28 @@
                 <span class="burger-item"></span>
               </div>
             </div>
+            <nav class="nav medium">
+              <ul class="nav__list">
+                <li class="list__item">
+                  <a href="#" class="list__link active">Accueil</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="list__link">Présentation</a>
+                </li>
+                <li class="list__item logo-hidden-medium">
+                  <a href="#" class="list__link logo"
+                    >boulangerie patisserie
+                    <span class="span__logo">victor hugo</span></a
+                  >
+                </li>
+                <li class="list__item">
+                  <a href="#" class="list__link">Nos produits</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="list__link">Contact</a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
