--- a/index.html
+++ b/index.html
@@ -127,8 +127,18 @@
             <p class="promo__text">Brioche à deux euros</p>
           </div>
         </div>
-        <div class="slider__img promo__img"></div>
-        <div class="slider__img promo__img"></div>
+        <div class="slider__img promo__img">
+          <div class="promo__content">
+            <p class="promo__title">promotion du samedi</p>
+            <p class="promo__text">Brioche à deux euros</p>
+          </div>
+        </div>
+        <div class="slider__img promo__img">
+          <div class="promo__content">
+            <p class="promo__title">promotion du samedi</p>
+            <p class="promo__text">Brioche à deux euros</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="equipe">
