--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="slider team" id="slider-team">
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">fabrice</h3>
                   <h4 class="team__subtitle">Gérant & boulanger</h4>
                   <p class="team__text">
