--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">nono</h3>
                   <h4 class="team__subtitle">Pâtissier</h4>
                   <p class="team__text">
@@ -188,7 +188,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">tamara</h3>
                   <h4 class="team__subtitle">Vendeuse</h4>
                   <p class="team__text">
@@ -209,7 +209,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">léna</h3>
                   <h4 class="team__subtitle">Apprenti vendeuse</h4>
                   <p class="team__text">
@@ -230,7 +230,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">claire</h3>
                   <h4 class="team__subtitle">Vendeuse</h4>
                   <p class="team__text">
@@ -251,7 +251,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">paul</h3>
                   <h4 class="team__subtitle">Apprenti vendeur</h4>
                   <p class="team__text">
@@ -268,7 +268,7 @@
             </div>
             <div class="slider__team">
               <div class="team__content">
-                <div class="content__text">
+                <div class="text__content">
                   <h3 class="team__title">cédric</h3>
                   <h4 class="team__subtitle">Apprenti boulanger</h4>
                   <p class="team__text">
@@ -359,7 +359,7 @@
       <div class="container">
         <h2 class="contact__title">nous contacter</h2>
         <div class="content__contact">
-          <form action="" method="get">
+          <form action="" method="get" class="form">
             <div class="contact__form">
               <input
                 type="text"
