modification + fin page contact

--- a/contact.htm
+++ b/contact.htm
@@ -38,7 +38,9 @@
                     <a href="./index.html" class="list__link">Accueil</a>
                   </li>
                   <li class="list__item">
-                    <a href="./presentation.html" class="list__link">Présentation</a>
+                    <a href="./presentation.html" class="list__link"
+                      >Présentation</a
+                    >
                   </li>
                   <li class="list__item logo-hidden-medium">
                     <a href="./index.html" class="list__link logo"
@@ -47,10 +49,12 @@
                     >
                   </li>
                   <li class="list__item">
-                    <a href="#" class="list__link active">Nos produits</a>
+                    <a href="#" class="list__link">Nos produits</a>
                   </li>
                   <li class="list__item">
-                    <a href="./contact.htm" class="list__link">Contact</a>
+                    <a href="./contact.htm" class="list__link active"
+                      >Contact</a
+                    >
                   </li>
                 </ul>
               </nav>
@@ -66,19 +70,21 @@
                   <a href="./index.html" class="list__link">Accueil</a>
                 </li>
                 <li class="list__item">
-                  <a href="./presentation.html" class="list__link">Présentation</a>
+                  <a href="./presentation.html" class="list__link"
+                    >Présentation</a
+                  >
                 </li>
                 <li class="list__item logo-hidden-medium">
-                  <a href="./index.html" class="list__link logo"
+                  <a href="index.html" class="list__link logo"
                     >boulangerie patisserie
                     <span class="span__logo">victor hugo</span></a
                   >
                 </li>
                 <li class="list__item">
-                  <a href="#" class="list__link active">Nos produits</a>
+                  <a href="#" class="list__link">Nos produits</a>
                 </li>
                 <li class="list__item">
-                  <a href="./contact.htm" class="list__link">Contact</a>
+                  <a href="./contact.htm" class="list__link active">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -88,132 +94,132 @@
     </header>
     <div class="header__banner">
       <div class="header__content">
-        <h3 class="header__content--title">Nos pains</h3>
-        <p class="header__content--text">Produits fait sur place</p>
+        <h3 class="header__content--title">Nous contacter</h3>
+        <p class="header__content--text">Une question ? Nous vous répondons</p>
       </div>
     </div>
-    <div class="pain">
+    <div class="contacte">
       <div class="container">
-        <div class="pain__text">
-          <p class="pain__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed morbi
-            sed purus sodales pellentesque velit aliquet. Dolor, diam id
-            commodo, commodo fermentum, in sit. Sit neque lobortis turpis
-            euismod. A gravida dui, nullam cursus cursus. Proin molestie
-            facilisis velit pharetra purus. Tortor pellentesque in odio
-            fermentum ac in eget mi proin. Accumsan risus urna molestie rhoncus.
-            Pellentesque aliquam duis sapien, facilisis odio..
-          </p>
+        <div class="contacte__content">
+          <div class="contacte__text">
+            <p class="contacte__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lobortis
+              sollicitudin faucibus in id. Velit morbi vel praesent accumsan,
+              accumsan euismod. Et, rhoncus, quis morbi ac feugiat aliquam. Mi,
+              sit risus, lacus sit ipsum vitae. Risus maecenas sem risus nullam.
+              Imperdiet molestie iaculis nec tempor facilisi in non facilisis.
+              Egestas pellentesque nulla eleifend tellus facilisis at nunc
+              habitant. Erat id congue laoreet egestas id non malesuada sit. Et
+              sit sed pulvinar tortor, consectetur. Tristique dui purus pretium
+              neque, viverra neque, pellentesque. Ullamcorper massa vitae eu
+              metus quam magna penatibus iaculis nulla. Leo risus ullamcorper
+              commodo ipsum felis. Eget risus in
+            </p>
+          </div>
+          <div class="contact__info">
+            <div class="contact__info--title">
+              <p class="contact__info--title">Boulangerie Pâtisserie</p>
+              <p class="contact__info--title">Victor Hugo</p>
+            </div>
+            <div class="contact__info--content">
+              <div class="contact__info--adress info">
+                <div class="adress__img">
+                  <img
+                    src="./img/contact/Vectorlocation.svg"
+                    alt="adress"
+                    class="adress__img"
+                  />
+                </div>
+                <div class="info__adress--text">
+                  <p class="adress__text">57 rue Victor Hugo, 27000 Evreux</p>
+                </div>
+              </div>
+              <div class="contact__info--tel info">
+                <div class="info__tel--img">
+                  <img
+                    src="./img/contact/Vectortel.svg"
+                    alt="tel"
+                    class="img__tel"
+                  />
+                </div>
+                <div class="info__tel--text">
+                  <p class="tel__text">02 32 33 01 91</p>
+                </div>
+              </div>
+              <div class="contact__info--mail info">
+                <div class="info__mail--img">
+                  <img
+                    src="./img/contact/Vectormail.svg"
+                    alt="mail"
+                    class="img__mail"
+                  />
+                </div>
+                <div class="info__mail--text">
+                  <p class="mail__text">boulangerie@gmail.com</p>
+                </div>
+              </div>
+              <div class="contact__info--time">
+                <div class="info__time--img">
+                  <img
+                    src="./img/contact/Vectortime.svg"
+                    alt="time"
+                    class="img__time"
+                  />
+                </div>
+                <div class="info__time--text">
+                  <p class="time__text">Horaire d'ouverture</p>
+                  <p class="hour__text">Lundi: fermé</p>
+                  <p class="hour__text">Du mardi au samedi: 7h - 19h</p>
+                  <p class="hour__text">Dimanche: 7h - 13h</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="pain__content">
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
+      </div>
+    </div>
+    <div class="formulaire">
+      <div class="container">
+        <h2 class="formulaire__title">Une question ? Posez la nous</h2>
+        <div class="formulaire__content">
+          <form action="" method="get" class="module">
+            <div class="contact__formulaire">
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Nom et prénom"
+                class="contact__formulaire--name contact__formulaire--box"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Baguette</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
+            <div class="contact__formulaire">
+              <input
+                type="text"
+                id="mail"
+                name="user__mail"
+                placeholder="Adresse mail"
+                class="contact__formulaire--mail contact__formulaire--box"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Tradition</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
+            <div class="contact__formulaire">
+              <input
+                type="text"
+                id="msg"
+                placeholder="Sujet du message"
+                class="contact__formulaire--text contact__formulaire--box"
               />
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain aux céréales</p>
+            <div class="contact__formulaire">
+              <textarea
+                id="msg"
+                placeholder="Contenu de votre message"
+                class="contact__formulaire--msg contact__formulaire--box"
+              ></textarea>
             </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
+            <div class="formulaire__btn">
+              <a href="#" class="btn formulaire__btn">envoyer</a>
             </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de campagne</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain bucheron</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de maïs</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain de sègle</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pain complet</p>
-            </div>
-          </div>
-          <div class="pain__content--description">
-            <div class="pain__content--img">
-              <img
-                src="./img/produits/pains/bread-2436370_640 3.jpg"
-                alt="pain"
-                class="pain__img"
-              />
-            </div>
-            <div class="pain__description--text">
-              <p class="pain__content--text">Pains spéciaux</p>
-            </div>
-          </div>
+          </form>
         </div>
       </div>
     </div>
@@ -226,10 +232,16 @@
                 <h3 class="footer__title page__title">Pages</h3>
                 <ul class="footer__list">
                   <li class="page__item">
-                    <a href="./index.html" class="page__link footer__text">Accueil</a>
+                    <a href="./index.html" class="page__link footer__text"
+                      >Accueil</a
+                    >
                   </li>
                   <li class="page__item">
-                    <a href="./presentation.html" class="page__link footer__text">Présentation</a>
+                    <a
+                      href="./presentation.html"
+                      class="page__link footer__text"
+                      >Présentation</a
+                    >
                   </li>
                   <li class="page__item">
                     <a href="#" class="page__link footer__text">Nos produits</a>
