--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="container">
             <div class="content__nav">
               <div class="logo-container">
-                <a href="#" class="logo logo-show-medium"
+                <a href="./index.html" class="logo logo-show-medium"
                   >boulangerie patisserie
                   <span class="span__logo">victor hugo</span></a
                 >
@@ -35,13 +35,13 @@
               <nav class="nav">
                 <ul class="nav__list">
                   <li class="list__item">
-                    <a href="#" class="list__link active">Accueil</a>
+                    <a href="./index.html" class="list__link active">Accueil</a>
                   </li>
                   <li class="list__item">
-                    <a href="#" class="list__link">Présentation</a>
+                    <a href="./presentation.html" class="list__link">Présentation</a>
                   </li>
                   <li class="list__item logo-hidden-medium">
-                    <a href="#" class="list__link logo"
+                    <a href="./index.html" class="list__link logo"
                       >boulangerie patisserie
                       <span class="span__logo">victor hugo</span></a
                     >
@@ -50,7 +50,7 @@
                     <a href="#" class="list__link">Nos produits</a>
                   </li>
                   <li class="list__item">
-                    <a href="#" class="list__link">Contact</a>
+                    <a href="./contact.htm" class="list__link">Contact</a>
                   </li>
                 </ul>
               </nav>
@@ -63,13 +63,13 @@
             <nav class="nav medium">
               <ul class="nav__list">
                 <li class="list__item">
-                  <a href="#" class="list__link active">Accueil</a>
+                  <a href="./index.html" class="list__link active">Accueil</a>
                 </li>
                 <li class="list__item">
-                  <a href="#" class="list__link">Présentation</a>
+                  <a href="./presentation.html" class="list__link">Présentation</a>
                 </li>
                 <li class="list__item logo-hidden-medium">
-                  <a href="#" class="list__link logo"
+                  <a href="./index.html" class="list__link logo"
                     >boulangerie patisserie
                     <span class="span__logo">victor hugo</span></a
                   >
@@ -78,7 +78,7 @@
                   <a href="#" class="list__link">Nos produits</a>
                 </li>
                 <li class="list__item">
-                  <a href="#" class="list__link">Contact</a>
+                  <a href="./contact.htm" class="list__link">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -452,10 +452,10 @@
                 <h3 class="footer__title page__title">Pages</h3>
                 <ul class="footer__list">
                   <li class="page__item">
-                    <a href="#" class="page__link footer__text">Accueil</a>
+                    <a href="./index.html" class="page__link footer__text">Accueil</a>
                   </li>
                   <li class="page__item">
-                    <a href="#" class="page__link footer__text">Présentation</a>
+                    <a href="./presentation.html" class="page__link footer__text">Présentation</a>
                   </li>
                   <li class="page__item">
                     <a href="#" class="page__link footer__text">Nos produits</a>
@@ -481,7 +481,7 @@
             <div class="footer__contact">
               <div>
                 <h3 class="footer__title title__contact">Contact</h3>
-                <a href="#" class="contact__link footer__text"
+                <a href="./contact.htm" class="contact__link footer__text"
                   >Nous contacter</a
                 >
                 <a
